<resources>
    <string name="app_name">Crop Deal</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email ID</string>
    <string name="password">Password</string>
    <string name="google_sign_in">Sign In with Google</string>
    <string name="facebook_sign_in">Sign In with Facebook</string>
    <string name="new_user">New User? Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="existing_user">Existing User? Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="userAccount">Choose your desired user account</string>
    <string name="farmer">Farmer</string>
    <string name="dealer">Dealer</string>
    <string name="profile_pic">profile pic</string>
    <string name="edit_profile">  Edit Profile  </string>
    <string name="send_feedback">Send Feedback</string>
    <string name="Rate_Us">Rate Us</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="current_password">Current Password</string>
    <string name="new_password_min_9_char">New Password (min 9 char)</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="confirm">confirm</string>
    <string name="select_dob">Date of Birth</string>


    //Facebook Strings, Do Not Touch

    <string name="facebook_app_id">1149003122597016</string>
    <string name="fb_login_protocol_scheme">fb1149003122597016</string>
    <string name="facebook_client_token">EAAQVAyL33JgBAD2SKVaLZBHiIhyxZA4xhoRmm9KPcNlBUhvZAbPV2vELu9Pa9FTUDdt1YP8ZBZAcaZBpgMXkC07lECKaaZAvvamsz3Ha5ihp3QVO4SYJqGboLlO42sFZCtAfPpeXdGZBih0TqnT5rB8geaktJSZBRCZCVKT97nkfXtueZC7yBsFTa3aShDgnq2R6qUTDDQMxZCWRwunR9OaU5Cwx9</string>
    <string name="first_name">First Name</string>
    <string name="email_id">Email ID</string>
    <string name="location">Location</string>
    <string name="phone">Phone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirmation">Do You Really Want To Log Out?</string>
    <string name="exit">EXIT</string>

    <string name="aboutUsText1"> CropDeals is an organization aiming to help farmers get best prices
    for their crops. By using our platform, the need of middleman ends thus removing the profit cutting
    on selling.
         Dealers can avail best deals by buying directly from the farmers.</string>

    <string name="aboutUsText2"> Our app provides hassle-free experience to users. We\'re commited to
    provide best user-experience by bringing out new updates regularly. Feel free to provide your valuable
    feedback and help us improve.</string>
    <string name="crop_names">Crop Names</string>
    <string name="description">Description</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="payment_details">Payment Details</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="account_number">Account Number</string>
    <string name="bank_name">Bank Name</string>
    <string name="add_payment_details">ADD PAYMENT DETAILS</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="subscribe_topics">Subscribe Topics</string>
    <string name="you_can_select_more_than_one">You can select more than one</string>
    <string name="save">Save</string>
    <string name="filter">Filter</string>
    <string name="crop_name">Crop Name</string>
    <string name="filter_by_date">Filter By Date</string>
    <string name="filter_by_crop">Filter By Crop</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="no_of_cars">Vehicle number</string>
    <string name="current_time">Current Time:</string>
        <string name="default_web_client_id_1">571175692324-7fs44r8e5hfaicks94eh4dlfet8dt6gc.apps.googleusercontent.com</string>
    <string name="enter_crop_name">Enter Crop Name</string>
    <string name="noBankDialogTitle">You cannot Add new Crops without adding your bank account details</string>
    <string name="noBankDialogMessage">Do you want to add now?</string>
    <string name="selectUserTypeDialogText">Please Select User Type</string>
    <string name="accountDisabled">Your account has been disabled</string>
    <string name="resetMailSent">Password Reset Mail Sent Successfully</string>
    <string name="cropSubbed">Details of selected crops subscribed</string>

</resources>