<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/paymentDetailsLyt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PaymentDetailsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/appbg"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/signBtnBG"
            android:gravity="center_horizontal"
            android:padding="2dp"
            android:text="@string/add_payment_details"
            android:textColor="#5E35B1"
            android:textSize="24sp"
            android:textStyle="bold" />



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addBankNameET"
            android:layout_width="300dp"
            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="100dp"
                android:backgroundTint="@color/editTextBG"
                android:hint="@string/bank_name"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addAccountET"
            android:layout_width="300dp"
            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/editTextBG"
                android:hint="@string/account_number"
                android:inputType="number"
                android:minHeight="48dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addIFSCET"
            android:layout_width="300dp"
            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/editTextBG"
                android:hint="@string/ifsc_code"
                android:inputType="text"
                android:minHeight="48dp" />

        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/savePaymentDetailsButton"
            style="@style/positive_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="SAVE"
            app:cornerRadius="15dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>